++Added posts page for profile and made post component shared between modules

--- a/src/app/feature-modules/user/home-con/home-page/content/content.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/content/content.component.html
@@ -32,7 +32,7 @@
 
   <div class="data-con">
     <div class="caption-con" [ngClass]="'fc' + fontClass">
-      {{caption}}
+      <p>{{caption}}</p>
     </div>
 
 
