--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -186,24 +186,31 @@
 .fc0 {
   p {
     font-size: 15px !important;
+    margin-bottom: 0;
   }
 }
 
 .fc1 {
   p {
     font-size: 18px !important;
+    margin-bottom: 0;
+
   }
 }
 
 .fc2 {
   p {
     font-size: 21px !important;
+    margin-bottom: 0;
+
   }
 }
 
 .fc3 {
   p {
     font-size: 24px !important;
+    margin-bottom: 0;
+
   }
 }
 
