--- a/src/app/feature-modules/user/profile/profile/following/following.component.html
+++ b/src/app/feature-modules/user/profile/profile/following/following.component.html
@@ -1,1 +1,28 @@
-<p>following works!</p>
+<div class="s-p-r-p p-r">
+  <!--<div class="container">-->
+  <!--<div class="row">-->
+  <!--<div class="col al-h-c al-h-p">-->
+  <!--<p class="float-left l">Album</p>-->
+  <!--<p class="float-right r">View All</p>-->
+  <!--</div>-->
+  <!--</div>-->
+
+  <!--</div>-->
+
+  <div class="">
+    <div class="al-c w-100" *ngIf="loaded">
+
+      <div class="im bcimg" *ngFor="let p of profiles"
+           [ngStyle]="{'background-image':'url( data:image/jpeg;base64,' + p?.featuredImage + ')'}">
+      </div>
+      <div *ngIf="connection.length == 0" class="n-c-y">Following no one.</div>
+    </div>
+  </div>
+  <br>
+  <ngx-spinner bdColor="rgba(152,61,61,0)"
+               size="small"
+               color="#000"
+               type="ball-fall"
+               [fullScreen]="false"
+               name="loadingFollowing"></ngx-spinner>
+</div>
