--- a/src/app/feature-modules/user/user/user.component.html
+++ b/src/app/feature-modules/user/user/user.component.html
@@ -28,7 +28,7 @@
 
         </div>
         <div class="col">
-          <div class="ii-c" routerLink="./profile"><i class="fa fa-user"></i>
+          <div class="ii-c" routerLink="/user/user/profile"><i class="fa fa-user"></i>
           </div>
 
         </div>
