--- a/src/scss/_profile.scss
+++ b/src/scss/_profile.scss
@@ -278,3 +278,14 @@
   padding: 30px 10px;
   text-align: center;
 }
+
+.f-b-c{
+  .btn-info{
+    width: 74px;
+  }
+  .f-l-b-c{
+    position: absolute;
+    right: 14px;
+    bottom: 3px;
+  }
+}
