--- a/src/app/feature-modules/user/profile/profile/following/following.component.html
+++ b/src/app/feature-modules/user/profile/profile/following/following.component.html
@@ -1,4 +1,5 @@
 <div class="s-p-r-p p-r">
+
   <!--<div class="container">-->
   <!--<div class="row">-->
   <!--<div class="col al-h-c al-h-p">-->
@@ -6,23 +7,33 @@
   <!--<p class="float-right r">View All</p>-->
   <!--</div>-->
   <!--</div>-->
-
   <!--</div>-->
 
   <div class="">
     <div class="al-c w-100" *ngIf="loaded">
-
-      <div class="im bcimg" *ngFor="let p of profiles"
-           [ngStyle]="{'background-image':'url( data:image/jpeg;base64,' + p?.featuredImage + ')'}">
+      <div class="fol-con" *ngFor="let p of profiles" routerLink="../../profile" [queryParams]="{userId : p.userId,
+      reload: true}">
+        <div class="im bcimg"
+             [ngStyle]="{'background-image':'url( data:image/jpeg;base64,' + p?.curentProfilePic + ')'}">
+        </div>
+        <p>@{{p?.userLogin}}</p>
       </div>
-      <div *ngIf="connection.length == 0" class="n-c-y">Following no one.</div>
+      <div *ngIf="connection.length == 0" class="n-c-y">No Followers Yet</div>
+
     </div>
   </div>
-  <br>
-  <ngx-spinner bdColor="rgba(152,61,61,0)"
-               size="small"
-               color="#000"
-               type="ball-fall"
-               [fullScreen]="false"
-               name="loadingFollowing"></ngx-spinner>
+  <div class="p-spin-con">
+    <ngx-spinner bdColor="rgba(152,61,61,0)"
+                 size="default"
+                 color="#ddd"
+                 type="ball-fall"
+                 [fullScreen]="false"
+                 name="loadingFollowing"></ngx-spinner>
+  </div>
+
+  <div class="loading row">
+  </div>
+
 </div>
+
+
