--- a/src/app/feature-modules/user/profile/profile/likes/likes.component.html
+++ b/src/app/feature-modules/user/profile/profile/likes/likes.component.html
@@ -1,28 +1,46 @@
-<div class="s-p-r-p p-r">
-  <!--<div class="container">-->
-  <!--<div class="row">-->
-  <!--<div class="col al-h-c al-h-p">-->
-  <!--<p class="float-left l">Album</p>-->
-  <!--<p class="float-right r">View All</p>-->
-  <!--</div>-->
-  <!--</div>-->
+<!--<div class="s-p-r-p p-r">-->
+<!---->
 
-  <!--</div>-->
+<!--<div class="">-->
+<!--<div class="al-c w-100" *ngIf="loaded">-->
 
-  <div class="">
-    <div class="al-c w-100" *ngIf="loaded">
+<!--<div class="im bcimg" *ngFor="let p of posts"-->
+<!--[ngStyle]="{'background-image':'url( data:image/jpeg;base64,' + p?.featuredImage + ')'}">-->
+<!--</div>-->
+<!--<div *ngIf="likes.length == 0" class="n-c-y">No Posts yet</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--<br>-->
+<!--<ngx-spinner bdColor="rgba(152,61,61,0)"-->
+<!--size="small"-->
+<!--color="#000"-->
+<!--type="ball-fall"-->
+<!--[fullScreen]="false"-->
+<!--name="loadingLikes"></ngx-spinner>-->
+<!--</div>-->
 
-      <div class="im bcimg" *ngFor="let p of posts"
-           [ngStyle]="{'background-image':'url( data:image/jpeg;base64,' + p?.featuredImage + ')'}">
-      </div>
-      <div *ngIf="likes.length == 0" class="n-c-y">No Posts yet</div>
+<div>
+  <div class="t-l">
+
+    <div *ngFor="let p of posts;let i = index;">
+      <app-post [post]="p" [account]="account"></app-post>
+    </div>
+    <div *ngIf="loaded">
+      <div *ngIf="posts.length == 0" class="n-c-y">No Likes yet</div>
+    </div>
+
+
+    <div class="p-spin-con">
+      <ngx-spinner bdColor="rgba(152,61,61,0)"
+                   size="default"
+                   color="#ddd"
+                   type="ball-fall"
+                   [fullScreen]="false"
+                   name="loadingLikes"></ngx-spinner>
+    </div>
+
+    <div class="loading row">
     </div>
   </div>
-  <br>
-  <ngx-spinner bdColor="rgba(152,61,61,0)"
-               size="small"
-               color="#000"
-               type="ball-fall"
-               [fullScreen]="false"
-               name="loadingLikes"></ngx-spinner>
 </div>
+
