--- a/src/scss/_workboard.scss
+++ b/src/scss/_workboard.scss
@@ -311,13 +311,20 @@
   width: 87%;
   margin: 0 auto;
   @extend .clearfix;
-  .im{
-    width: 30%;
-    height: 90px;
-    float: left;
+  .fol-con{
+    @extend .clearfix;
     display: inline-block;
-    margin: 1.5%;
-    border-radius: 7px;
+    width: 32%;
+    float: left;
+    p{
+      text-align: center;
+    }
+  }
+  .im{
+    height: 80px;
+    width: 80px;
+    margin: 20px auto 5px;
+    border-radius: 40px;
   }
 }
 
