++Added block functionality

--- a/src/app/feature-modules/user/home-con/saves/saves.component.html
+++ b/src/app/feature-modules/user/home-con/saves/saves.component.html
@@ -36,11 +36,11 @@
         <div class="col">
 
         </div>
-        <div class="col lb">
+        <div class="col lbs">
           <p>123</p>
           <small>FOLLOWERS</small>
         </div>
-        <div class="col lb">
+        <div class="col lbs">
           <p>23</p>
           <small>FOLLOWING</small>
         </div>
