--- a/src/app/feature-modules/user/profile/profile/profile.component.html
+++ b/src/app/feature-modules/user/profile/profile/profile.component.html
@@ -38,10 +38,16 @@
       <div class="col-3"></div>
       <div class="col-3 f-b-c">
         <div *ngIf="loaded">
+
           <div class="btn btn-sm btn-info" *ngIf="!visitingProfile">Hahu-Cash</div>
-          <div class="btn btn-sm btn-info" [ngClass]="{'disabled' : loadingFollowingStatus}" *ngIf="visitingProfile"
-               (click)="followUser()"><span *ngIf="isUserFollowing">Following</span>
-                                      <span *ngIf="!isUserFollowing">Follow</span>
+
+          <div class="btn btn-sm btn-info" [ngClass]="{'disabled' : loadingFollowingStatus}"
+               *ngIf="visitingProfile && !isUserBlocked"
+               (click)="followUser()">
+            <span *ngIf="isUserFollowing">Following</span>
+
+            <span *ngIf="!isUserFollowing">Follow</span>
+
             <div class="f-l-b-c">
               <ngx-spinner bdColor="rgba(152,61,61,0)"
                            size="small"
@@ -51,12 +57,45 @@
                            name="followSpinner"></ngx-spinner>
             </div>
           </div>
+
+          <div class="btn btn-sm btn-info" [ngClass]="{'disabled' : loadingBlockedStatus}"
+               *ngIf="visitingProfile && isUserBlocked"
+               (click)="unblockUser()">
+            <span>Blocked</span>
+
+
+            <div class="f-l-b-c">
+              <ngx-spinner bdColor="rgba(152,61,61,0)"
+                           size="small"
+                           color="#fff"
+                           type="ball-fall"
+                           [fullScreen]="false"
+                           name="blockSpinner"></ngx-spinner>
+            </div>
+          </div>
+
+
         </div>
       </div>
-      <div class="col-3">
-        <div class="btn btn-sm btn-default">Telechat</div>
+      <div class="col-5">
+        <div class="btn btn-sm btn-default f-l">Telechat</div>
+
+        <div class="btn-group" dropdown placement="bottom right" *ngIf="visitingProfile">
+
+          <div class="btn btn-sm btn-secondary " dropdownToggle><i class="fa fa-ellipsis-v"></i></div>
+          <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu dropdown-menu-right"
+              role="menu" aria-labelledby="button-basic">
+            <li role="menuitem" (click)="blockUser()" *ngIf="!isUserBlocked"><a class="dropdown-item" ><i class="fa fa-ban"></i> Block</a></li>
+            <li role="menuitem" (click)="unblockUser()" *ngIf="isUserBlocked"><a class="dropdown-item" > Un Block</a></li>
+            <!--<li role="menuitem"><a class="dropdown-item" href="#">Report</a></li>-->
+            <!--<li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>-->
+            <!--<li class="divider dropdown-divider"></li>-->
+            <!--<li role="menuitem"><a class="dropdown-item" href="#">Separated link</a>-->
+            <!--</li>-->
+          </ul>
+        </div>
       </div>
-      <div class="col-3"></div>
+      <div class="col-1"></div>
     </div>
 
     <br>
