--- a/src/app/feature-modules/user/profile/pages-setting/pages-setting.component.html
+++ b/src/app/feature-modules/user/profile/pages-setting/pages-setting.component.html
@@ -20,18 +20,31 @@
     <div class="container">
       <div class="row v-s">
         <div class="col-8"><p>POST PAGE</p></div>
-        <div class="col-4"></div>
+        <div class="col-4">
+          <ui-switch [checked]="true"
+                     checkedLabel="public"
+                     uncheckedLabel="private"></ui-switch>
+        </div>
       </div>
       <div class="row v-s">
         <div class="col-8"><p>LIKES PAGE</p></div>
-        <div class="col-4"></div>
+        <div class="col-4">
+          <ui-switch [checked]="true"
+                     checkedLabel="public"
+                     uncheckedLabel="private"></ui-switch>
+        </div>
       </div>
       <div class="row v-s">
         <div class="col-8"><p>FOLLOWING PAGE</p></div>
-        <div class="col-4"></div>
+        <div class="col-4">
+          <ui-switch [checked]="true"
+                     checkedLabel="public"
+                     uncheckedLabel="private"></ui-switch>
+        </div>
       </div>
     </div>
   </div>
+
 
 
 
