--- a/src/scss/_hahu.scss
+++ b/src/scss/_hahu.scss
@@ -110,28 +110,28 @@
     height: 150px;
   }
   .post-o-c {
-    &.f-o-p-r{
+    &.f-o-p-r {
       margin-bottom: 15px !important;
-      .p-b-i{
+      .p-b-i {
         width: 60%;
         right: 0;
         height: 100%;
         max-height: 250px;
       }
-      .w-bck{
+      .w-bck {
         width: 65%;
         margin-top: 15px !important;
       }
     }
-    &.f-o-p-l{
+    &.f-o-p-l {
       margin-bottom: 15px !important;
-      .p-b-i{
+      .p-b-i {
         width: 60%;
         left: 0;
         height: 100%;
         max-height: 250px;
       }
-      .w-bck{
+      .w-bck {
         width: 65%;
         margin-top: 15px !important;
         margin-left: 35% !important;
@@ -152,7 +152,7 @@
   .post {
     &.dark {
       background-color: #353a50 !important;
-      .p-con-c{
+      .p-con-c {
         background-color: #353a50;
       }
       .n-con {
@@ -298,15 +298,15 @@ $ppw: 36px;
 }
 
 .com-con {
-  .comen-form{
+  .comen-form {
     padding: 7px;
     position: relative;
-    textarea{
+    textarea {
       padding-right: 44px;
     }
-    .p-btn{
+    .p-btn {
       position: absolute;
-      right:12px;
+      right: 12px;
       bottom: 12px;
     }
   }
@@ -356,16 +356,16 @@ $ppw: 36px;
 
       }
     }
-    .a-con{
+    .a-con {
       margin-left: 0 !important;
       width: 10%;
       float: right;
       text-align: center;
-      .fa{
+      .fa {
         margin: 0;
       }
     }
-    .dropdown-menu{
+    .dropdown-menu {
       min-width: 50px;
       padding: 2px;
     }
@@ -377,7 +377,6 @@ $ppw: 36px;
   width: 100%;
 }
 
-
 .r-com-con {
   overflow: auto;
   white-space: nowrap;
@@ -385,8 +384,7 @@ $ppw: 36px;
 
   @extend .s-style;
 
-
-  &.h-scroll{
+  &.h-scroll {
     padding-bottom: 15px;
     &::-webkit-scrollbar-thumb {
       background: rgba(255, 255, 255, 0);
@@ -653,6 +651,7 @@ $ppw: 36px;
   padding: 10px 10px;
   overflow: auto;
   white-space: nowrap;
+  min-height: 43px;
   .badge {
     color: #121212;
     font-size: 13px;
@@ -662,31 +661,32 @@ $ppw: 36px;
     padding-left: 12px;
     padding-right: 12px;
   }
-  .badge-default {
 
-    background-color: #283888;
+  .sb1, .badge-default {
+    background-color: rgb(136, 230, 247);
+
   }
-  .badge-primary {
+  .sb2, .badge-primary {
 
     background-color: #752888;
   }
-  .badge-secondary {
+  .sb3, .badge-secondary {
 
-    background-color: rgb(255, 255, 255);
+    background-color: #953f6f;
   }
-  .badge-info {
+  .sb4, .badge-info {
 
-    background-color: rgb(136, 230, 247);
+    background-color: #aa694f;
   }
-  .badge-success {
+  .sb5, .badge-success {
 
-    background-color: #906904;
+    background-color: #9b7820;
   }
-  .badge-danger {
+  .sb6, .badge-danger {
 
-    background-color: #9c5a38;
+    background-color: #4a47a7;
   }
-  .badge-warning {
+  .sb7, .badge-warning {
 
     background-color: #842c52;
   }
@@ -743,19 +743,20 @@ $ppw: 36px;
     background-color: #000 !important;
   }
 }
-.school-feed-con{
-  background-color:  #000 !important;
-  .news-con{
+
+.school-feed-con {
+  background-color: #000 !important;
+  .news-con {
     background-color: #000 !important;
   }
 }
 
-.c-c-b{
+.c-c-b {
   position: fixed;
   z-index: 999;
   right: 22px;
   bottom: 166px;
-  button{
+  button {
     border-radius: 50px;
     width: 50px;
     height: 50px;
@@ -763,7 +764,7 @@ $ppw: 36px;
   }
 }
 
-.spinner-con{
+.spinner-con {
   position: fixed;
   width: 100%;
   height: 100%;
